--- a/views/root.ejs
+++ b/views/root.ejs
@@ -3,7 +3,7 @@
   <body>
     <h1>Welcome</h1>
     <center>
-        <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.clientId %>&redirect_uri=<%= process.env.slackRedirect %>new&scope=bot'><img alt="Add to Slack" height="40" width="139" src="/images/add_to_slack.png"></a>
+        <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.clientId %>&redirect_uri=<%= process.env.slackRedirect %>aouth&scope=bot'><img alt="Add to Slack" height="40" width="139" src="/images/add_to_slack.png"></a>
     </center>
   </body>
 </html>
